# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "arrow-flight"
description = "Apache Arrow Flight"
version = "35.0.0"
edition = "2021"
rust-version = "1.62"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
homepage = "https://github.com/apache/arrow-rs"
repository = "https://github.com/apache/arrow-rs"
license = "Apache-2.0"

[dependencies]
arrow-array = { version = "35.0.0", path = "../arrow-array" }
arrow-buffer = { version = "35.0.0", path = "../arrow-buffer" }
# Cast is needed to work around https://github.com/apache/arrow-rs/issues/3389
arrow-cast = { version = "35.0.0", path = "../arrow-cast" }
arrow-ipc = { version = "35.0.0", path = "../arrow-ipc" }
arrow-schema = { version = "35.0.0", path = "../arrow-schema" }
base64 = { version = "0.21", default-features = false, features = ["std"] }
tonic = { version = "0.8", default-features = false, features = ["transport", "codegen", "prost"] }
bytes = { version = "1", default-features = false }
prost = { version = "0.11", default-features = false }
prost-derive = { version = "0.11", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# CLI-related dependencies
clap = { version = "4.1", default-features = false, features = ["std", "derive", "env", "help", "error-context", "usage"], optional = true }
tracing-log = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["ansi", "fmt"], optional = true }

[package.metadata.docs.rs]
all-features = true

[features]
default = []
flight-sql-experimental = []
tls = ["tonic/tls"]

# Enable CLI tools
cli = ["arrow-cast/prettyprint", "clap", "tracing-log", "tracing-subscriber", "tonic/tls-webpki-roots"]

[dev-dependencies]
arrow-cast = { version = "35.0.0", path = "../arrow-cast", features = ["prettyprint"] }
assert_cmd = "2.0.8"
tempfile = "3.3"
tokio-stream = { version = "0.1", features = ["net"] }
tower = "0.4.13"

[build-dependencies]
# Pin specific version of the tonic-build dependencies to avoid auto-generated
# (and checked in) arrow.flight.protocol.rs from changing
proc-macro2 = { version = "=1.0.53", default-features = false }
prost-build = { version = "=0.11.8", default-features = false }
tonic-build = { version = "=0.8.4", default-features = false, features = ["transport", "prost"] }

[[example]]
name = "flight_sql_server"
required-features = ["flight-sql-experimental", "tls"]

[[bin]]
name = "flight_sql_client"
required-features = ["cli", "flight-sql-experimental", "tls"]

[[test]]
name = "flight_sql_client_cli"
path = "tests/flight_sql_client_cli.rs"
required-features = ["cli", "flight-sql-experimental", "tls"]
