# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "arrow-ipc"
version = "27.0.0"
description = "Support for the Arrow IPC format"
homepage = "https://github.com/apache/arrow-rs"
repository = "https://github.com/apache/arrow-rs"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
license = "Apache-2.0"
keywords = ["arrow"]
include = [
    "benches/*.rs",
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2021"
rust-version = "1.62"

[lib]
name = "arrow_ipc"
path = "src/lib.rs"
bench = false

[dependencies]
arrow-array = { version = "27.0.0", path = "../arrow-array" }
arrow-buffer = { version = "27.0.0", path = "../arrow-buffer" }
arrow-cast = { version = "27.0.0", path = "../arrow-cast" }
arrow-data = { version = "27.0.0", path = "../arrow-data" }
arrow-schema = { version = "27.0.0", path = "../arrow-schema" }
flatbuffers = { version = "22.9.2", default-features = false, features = ["thiserror"] }
lz4 = { version = "1.23", default-features = false, optional = true }
zstd = { version = "0.12.0", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3.3"
