# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "arrow-ipc"
version = { workspace = true }
description = "Support for the Arrow IPC format"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "arrow_ipc"
bench = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true}
flatbuffers = { version = "25.2.10", default-features = false }
lz4_flex = { version = "0.12", default-features = false, features = ["std", "frame"], optional = true }
zstd = { version = "0.13.0", default-features = false, optional = true }

[features]
default = []
lz4 = ["lz4_flex"]

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.3"
tokio = "1.43.0"
# used in benches
memmap2 = "0.9.3"
bytes = "1.9"

[[bench]]
name = "ipc_writer"
harness = false

[[bench]]
name = "ipc_reader"
harness = false
