# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

# Note this package is not published to crates.io, it is only used for testing
# the arrow-pyarrow crate in the arrow-rs repository.
#
# It is not part of the workspace so that `cargo test --all` does not require
# a Python interpreter or the pyarrow package to be installed.
#
# It is used to run tests that require a Python interpreter and the pyarrow
# package installed. It is not intended to be used as a library or a standalone
# application.
#
# It is different from `arrow-pyarrow-integration-testing` in that it works
# with a standard pyarrow installation, rather than building a dynamic library
# that can be loaded by Python (which requires additional configuraton of the
# Python environment).

[package]
name = "arrow-pyarrow-testing"
description = "Tests for arrow-pyarrow that require only a Python interpreter and pyarrow installed"
version = "0.1.0"
homepage = "https://github.com/apache/arrow-rs"
repository = "https://github.com/apache/arrow-rs"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
license = "Apache-2.0"
keywords = ["arrow"]
edition = "2024"
rust-version = "1.85"
publish = false


[dependencies]
# Note no dependency on arrow, to ensure arrow-pyarrow can be used by itself
arrow-array = { path = "../arrow-array" }
arrow-pyarrow = { path = "../arrow-pyarrow" }
pyo3 = { version = "0.26.0", default-features = false }
