# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "arrow-variant"
version = "54.3.0"
description = "JSON to Arrow Variant conversion utilities"
homepage = "https://github.com/apache/arrow-rs"
repository = "https://github.com/apache/arrow-rs"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
license = "Apache-2.0"
keywords = ["arrow"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2021"
rust-version = "1.62"

[lib]
name = "arrow_variant"
path = "src/lib.rs"

[features]
default = []

[dependencies]
arrow-array = { version = "54.3.0", path = "../arrow-array", features = ["canonical_extension_types"] }
arrow-buffer = { version = "54.3.0", path = "../arrow-buffer" }
arrow-cast = { version = "54.3.0", path = "../arrow-cast", optional = true }
arrow-data = { version = "54.3.0", path = "../arrow-data" }
arrow-schema = { version = "54.3.0", path = "../arrow-schema", features = ["canonical_extension_types"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
arrow-cast = { version = "54.3.0", path = "../arrow-cast" } 